--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	background-image: url(img/ballon.png);
-	z-index: -10;
+	z-index: 20;
+	transition: 0.5s ease-in;
 }
 
 .wrapper-header {
@@ -41,6 +42,7 @@ body {
 	height: 100vh;
 	justify-content: center;
 	align-items: center;
+	z-index: -10;
 }
 
 .content-header {
@@ -48,8 +50,9 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	width: 800px;
-	height: 400px;
+	width: 90%;
+	max-width: 800px;
+	height: auto;
 }
 
 .container-header .text-header {
@@ -57,11 +60,13 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 800px;
-	height: 150px;
+	height: auto;
 	font-family: var(--font1);
 	font-size: 2.5rem;
 	color: #fff;
 	text-shadow: 6px 6px 1px #da7297;
+	letter-spacing: 10px;
+	text-align: center;
 }
 
 .button-header {
@@ -94,12 +99,76 @@ body {
 /* Header-End */
 
 /* Content-Start */
-.wrapper-content {
-	height: 100vh;
+.container-content {
+	height: auto;
+	z-index: -10;
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
 	background-image: url(img/ballon.png);
-	z-index: 20;
+	transition: 0.5s ease-in;
+	padding: 20px;
 }
+
+.container-content .wrapper-content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+.card-content {
+	display: flex;
+	background-color: var(--cwhite);
+	width: 90%;
+	max-width: 600px;
+	height: auto;
+	border-radius: 10px;
+	border: 10px solid var(--cwhite);
+	z-index: -10;
+	box-shadow: 8px 6px 1px #1278b3;
+}
+
+.img-content {
+	border-radius: 10px;
+}
+
+.img-content img {
+	width: 200px;
+	height: 300px;
+	border-radius: 10px 0px 0px 10px;
+}
+
+.text-content {
+	margin: 30px;
+	font-family: var(--font2);
+	text-align: justify;
+}
+
+h5 {
+	margin-top: 5px;
+}
+
 /* Content-End */
+
+@media (max-width: 768px) {
+	.container-header .text-header {
+		font-size: 1.2rem;
+		letter-spacing: 5px;
+	}
+
+	.button-header {
+		width: 120px;
+		height: 35px;
+	}
+
+	.card-content {
+		flex-direction: column;
+		margin: 0;
+	}
+
+	.img-content img {
+		width: 100%;
+		height: 350px;
+	}
+}
